assets/scss/styles.scss
// reset for buttons
button {
  text-align: left;
  outline: 0;

  &:focus {
    outline: 0;
  }
}

// remove spinner on chrome and firefox
input[type='number'] {
  -moz-appearance: textfield;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
}

.background-image {
  background: #e4e7e0;
  background-image: url(/images/background_low.jpg);
  background-attachment: fixed;
  background-size: 1100px;
  background-repeat: no-repeat;
  background-position-y: top;
  background-position-x: center;

  @media (min-width: theme('screens.md')) {
    background-size: cover;
  }
}

